fix yamaps and remove old dances

--- a/static/demo/want-to-festival/v2/index.html
+++ b/static/demo/want-to-festival/v2/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
-	<script src="http://api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
+	<script src="//api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="all.js"></script>
 </head>
